Feature/update application to provide new certificates (#61)
* Add endpoint to update the existing application.
Update OpenAPI documentation.

* Remove warning for multiple bindings.
