# swagger/openapi.json
@@ -15,6 +15,10 @@
   },
   "tags": [
     {
+      "name": "agrirouter© callback",
+      "description": "The callback for the agrirouter. This callback has to be referenced within the newly created application."
+    },
+    {
       "name": "non telemetry data management",
       "description": "Operations for non telemetry data management, i.e. publish images, task data or documents to the agrirouter."
     },
@@ -41,10 +45,6 @@
     {
       "name": "maintenance",
       "description": "Maintenance operations for internal usage. Do NOT use this profile in production."
-    },
-    {
-      "name": "agrirouter© callback",
-      "description": "The callback for the agrirouter. This callback has to be referenced within the newly created application."
     }
   ],
   "paths": {
@@ -142,6 +142,116 @@
             }
           }
         }
+      }
+    },
+    "/secured/api/application": {
+      "put": {
+        "tags": [
+          "application management"
+        ],
+        "description": "update an existing application within the middleware.",
+        "operationId": "application.update",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateApplicationRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "The application has been updated successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UpdateApplicationResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "In case of a parameter validation exception.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ParameterValidationProblemResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "In case of an unknown error.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "secured-api": []
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "application management"
+        ],
+        "description": "Register an application within the middleware.",
+        "operationId": "application.register",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ApplicationRegistrationRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "The application has been registered and was created successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RegisterApplicationResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "In case of a parameter validation exception.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ParameterValidationProblemResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "In case of an unknown error.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "secured-api": []
+          }
+        ]
       }
     },
     "/secured/api/application/supported-technical-message-types/{applicationId}": {
@@ -1153,62 +1263,6 @@
         ]
       }
     },
-    "/secured/api/application": {
-      "post": {
-        "tags": [
-          "application management"
-        ],
-        "description": "Register an application within the middleware.",
-        "operationId": "application.register",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ApplicationRegistrationRequest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "201": {
-            "description": "The application has been registered and was created successfully.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/RegisterApplicationResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "In case of a parameter validation exception.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ParameterValidationProblemResponse"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "In case of an unknown error.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "secured-api": []
-          }
-        ]
-      }
-    },
     "/unsecured/api/telemetry-platform/{applicationId}/{externalEndpointId}": {
       "get": {
         "tags": [
@@ -1231,6 +1285,15 @@
             "in": "path",
             "description": "The external endpoint ID.",
             "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "redirectUrl",
+            "in": "query",
+            "description": "The redirect URL for this onboard request.",
+            "required": false,
             "schema": {
               "type": "string"
             }
@@ -1329,6 +1392,15 @@
             "in": "path",
             "description": "The external endpoint ID.",
             "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "redirectUrl",
+            "in": "query",
+            "description": "The redirect URL for this onboard request.",
+            "required": false,
             "schema": {
               "type": "string"
             }
@@ -1952,6 +2024,81 @@
         },
         "description": "Generic error response to map parameter validation errors and provide clean API description without publishing internals."
       },
+      "ApplicationDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "description": "The technical ID of the entity.",
+            "format": "int64"
+          },
+          "version": {
+            "type": "integer",
+            "description": "The version of the entity.",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string",
+            "description": "The name of the application."
+          },
+          "applicationId": {
+            "type": "string",
+            "description": "The agrirouter© ID of the application."
+          },
+          "internalApplicationId": {
+            "type": "string",
+            "description": "The internal ID of the application."
+          },
+          "versionId": {
+            "type": "string",
+            "description": "The version of the application. Each agriouter version creates a new application in the middleware."
+          }
+        },
+        "description": "A container holding the basic representation of an application."
+      },
+      "UpdateApplicationResponse": {
+        "type": "object",
+        "properties": {
+          "timestamp": {
+            "type": "string",
+            "description": "The timestamp (UTC) of the response.",
+            "format": "date-time"
+          },
+          "application": {
+            "$ref": "#/components/schemas/ApplicationDto"
+          }
+        },
+        "description": "The response after an application has been successfully updated."
+      },
+      "UpdateApplicationRequest": {
+        "required": [
+          "internalApplicationId"
+        ],
+        "type": "object",
+        "properties": {
+          "internalApplicationId": {
+            "type": "string",
+            "description": "The internal ID of the application."
+          },
+          "name": {
+            "type": "string",
+            "description": "The name of the application."
+          },
+          "privateKey": {
+            "type": "string",
+            "description": "The private key of the application. Only needed if the application is an instance of a farming software or telemetry platform."
+          },
+          "publicKey": {
+            "type": "string",
+            "description": "The public key of the application. Only needed if the application is an instance of a farming software or telemetry platform."
+          },
+          "redirectUrl": {
+            "type": "string",
+            "description": "The redirect URL for the application. To configure a custom redirect URL that matches the location of the service."
+          }
+        },
+        "description": "The request parameters to update the existing application."
+      },
       "AddSupportedTechnicalMessageTypeRequest": {
         "required": [
           "supportedTechnicalMessageTypes"
@@ -2393,38 +2540,6 @@
         },
         "description": "The to search for one or multiple endpoints."
       },
-      "ApplicationDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "description": "The technical ID of the entity.",
-            "format": "int64"
-          },
-          "version": {
-            "type": "integer",
-            "description": "The version of the entity.",
-            "format": "int32"
-          },
-          "name": {
-            "type": "string",
-            "description": "The name of the application."
-          },
-          "applicationId": {
-            "type": "string",
-            "description": "The agrirouter© ID of the application."
-          },
-          "internalApplicationId": {
-            "type": "string",
-            "description": "The internal ID of the application."
-          },
-          "versionId": {
-            "type": "string",
-            "description": "The version of the application. Each agriouter version creates a new application in the middleware."
-          }
-        },
-        "description": "A container holding the basic representation of an application."
-      },
       "RegisterApplicationResponse": {
         "type": "object",
         "properties": {
@@ -2444,6 +2559,8 @@
           "applicationId",
           "applicationType",
           "name",
+          "privateKey",
+          "publicKey",
           "versionId"
         ],
         "type": "object",
@@ -2454,7 +2571,7 @@
           },
           "applicationId": {
             "type": "string",
-            "description": "The name of the application."
+            "description": "The ID of the application."
           },
           "versionId": {
             "type": "string",
@@ -2472,7 +2589,6 @@
             "type": "string",
             "description": "The type of the application.",
             "enum": [
-              "COMMUNICATION_UNIT",
               "FARMING_SOFTWARE",
               "TELEMETRY_PLATFORM"
             ]
